@@ -40,6 +40,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #18807: ``pyvenv`` now takes a --copies argument allowing copies
+  instead of symlinks even where symlinks are available and the default.
+
 - Issue #18538: ``python -m dis`` now uses argparse for argument processing.
   Patch by Michele Orrù.
 
